--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
     <div class="grid-container">
         <div class="item1">
             <h1>Join our community</h1>
@@ -39,5 +40,6 @@
             <p>New video every week</p>
         </div>
     </div>
+  </main>
 </body>
 </html>
